--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>prime-vue</title><script defer="defer" src="/js/chunk-vendors.07868b1a.js"></script><script defer="defer" src="/js/app.44a460d5.js"></script><link href="/css/app.3bcd8386.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but prime-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" href="/vue3-with-priveVue/favicon.ico" />
+    <title>prime-vue</title>
+    <script
+      defer="defer"
+      src="/vue3-with-priveVue/js/chunk-vendors.07868b1a.js"
+    ></script>
+    <script defer="defer" src="/vue3-with-priveVue/js/app.44a460d5.js"></script>
+    <link href="/vue3-with-priveVue/css/app.3bcd8386.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>
+      <strong>
+        We're sorry but prime-vue doesn't work properly without JavaScript
+        enabled. Please enable it to continue.
+      </strong>
+    </noscript>
+    <div id="app"></div>
+  </body>
+</html>
